2004-11-03 21:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added alert panel to loadDocument: so that
	if the build version loaded from the .gorm file is greater
	than the one of the running Gorm application, the user is
	warned that this .gorm file was created with a newer version
	of the application.
	* GormFilePrefsManager.[hm]: Added +currentVersion to give
	the current build number.
	
2004-10-26 21:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormControlEditor.m: Added code to call the superclass in
	the dragging methods if the type being dragged isn't a formatter.
	This was a bug introduced on 10-17.   Corrected now.  Thanks to
	Fabien Vallon for the report.
	
2004-10-24 01:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GNUmakefile.preamble
	* Palettes/1Windows/GNUmakefile.preamble
	* Palettes/2Controls/GNUmakefile.preamble
	* Palettes/3Containers/GNUmakefile.preamble
	* Palettes/4Data/GNUmakefile.preamble: Removed extra slash for
	compilation under MinGW on win32.
	
2004-10-23 20:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile.postamble: Changed the build process a little
	to be more compatible with MinGW on win32.
	
2004-10-17 12:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormControlEditor.m: Added necessary methods for dragging
	of the formatter to the view.
	* GormInternalViewEditor.m: Changed initWithObject:inDocument:
	so that the view doesn't attempt to accept an IBFormatterPboardType
	object from the drag when it shouldn't.
	* GormViewEditor.m: Made similar changes here.
	* Palettes/4Data/inspectors.m: Removed hard coded implementations
	of tables.  Added code to blank inspector when the formatter is
	detached.
	* Palette/4Data/GormNSDateFormatterInspector.gorm: Updated with
	new table.
	* Palette/4Data/GormNSNumberFormatterInspector.gorm: Updated with
	new table.
	
2004-10-03 12:51 Gregory John Casamento <greg_casamento@yahoo.com>
